add user delete route

--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -7,9 +7,14 @@ block content
         th= t('views.users.id')
         th= t('views.users.email')
         th= t('views.users.createdAt')
+        th= t('views.users.actions.head')
     tbody
       each user in users
         tr
           td= user.id
           td= user.email
           td= formatDate(user.createdAt)
+          td 
+            form(action=`users/${user.id}` method='post') 
+              input(name='_method', type='hidden', value='delete')
+              input(class='btn btn-danger', type='submit', value=t('views.users.actions.delete'))
