add Status model, /statuses & /statuses/new routes

--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -10,7 +10,7 @@ block content
         th= t('views.users.id')
         th= t('views.users.email')
         th= t('views.users.createdAt')
-        th= t('views.users.actions.head')
+        th= t('views.users.head')
     tbody
       each user in users
         tr
