edit status create tests, add edit status page

--- a/server/views/statuses/index.pug
+++ b/server/views/statuses/index.pug
@@ -19,3 +19,8 @@ block content
             td= status.id
             td= status.name
             td= formatDate(status.createdAt)
+            td.d-flex.flex-wrap
+              a.btn.btn-primary.me-1(href=`/statuses/${status.id}/edit`)= t('views.actions.edit')
+              form(action=`statuses/${status.id}` method='post') 
+                input(name='_method', type='hidden', value='delete')
+                input(class='btn btn-danger', type='submit', value=t('views.actions.delete'))
