--- a/server/views/statuses/new.pug
+++ b/server/views/statuses/new.pug
@@ -6,4 +6,4 @@ block header
 block content
   +formFor()(action=route('statuses') method='post')
     +input(status, 'name', errors)(type="text")
-    +submit(status)(value=t('views.statuses.actions.create'))
+    +submit(status)(value=t('views.actions.edit'))
