--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -18,7 +18,7 @@ block content
           td= user.email
           td= formatDate(user.createdAt)
           td.d-flex.flex-wrap
-            a.btn.btn-primary.me-1(href=`/users/${user.id}/edit`)= t('views.users.actions.edit')
+            a.btn.btn-primary.me-1(href=`/users/${user.id}/edit`)= t('views.actions.edit')
             form(action=`users/${user.id}` method='post') 
               input(name='_method', type='hidden', value='delete')
-              input(class='btn btn-danger', type='submit', value=t('views.users.actions.delete'))
+              input(class='btn btn-danger', type='submit', value=t('views.actions.delete'))
