--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -9,5 +9,5 @@ block content
     +input(user, 'lastName', errors)(type="text")
     +input(user, 'email', errors)(type="text")
     +input(user, 'password', errors)(type="password")
-    +submit(user)(value=t('views.users.actions.edit'))
+    +submit(user)(value=t('views.actions.edit'))
     input(name='_method', type='hidden', value='patch')
