add tasks & editorconfig

--- a/server/views/statuses/index.pug
+++ b/server/views/statuses/index.pug
@@ -9,8 +9,8 @@ block content
     table.table.table-borderless.table-striped.mt-5.bg-white
       thead 
         tr
-          th= t('views.statuses.id')
-          th= t('views.statuses.name')
+          th= t('views.common.id')
+          th= t('views.common.name')
           th= t('views.statuses.createdAt')
           th= t('views.statuses.head')
       tbody
