--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -7,7 +7,7 @@ block content
   table.table.table-striped
     thead
       tr
-        th= t('views.users.id')
+        th= t('views.common.id')
         th= t('views.users.email')
         th= t('views.users.createdAt')
         th= t('views.users.head')
