--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -21,9 +21,9 @@ block content
               td= task.id 
               td
                 a(href=`/tasks/${task.id}`)= task.name
-              td= task.statusId 
-              td= task.creatorId
-              td= task.executorId
+              td= task.statusName 
+              td= task.creatorName
+              td= task.executorName
               td= task.createdAt
               td.d-flex 
                 a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.actions.edit')
