add task view page

--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -27,6 +27,6 @@ block content
               td= task.createdAt
               td.d-flex 
                 a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.actions.edit')
-                form(action=`tasks/${task.id}` method='post') 
+                form(action=`/tasks/${task.id}` method='post') 
                   input(name='_method', type='hidden', value='delete')
                   input(class='btn btn-danger', type='submit', value=t('views.actions.delete'))
