--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -9,7 +9,7 @@ block content
       tr
         th= t('views.common.id')
         th= t('views.users.email')
-        th= t('views.users.createdAt')
+        th= t('views.common.createdAt')
         th= t('views.users.head')
     tbody
       each user in users
