--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -14,7 +14,7 @@ block content
             th= t('views.tasks.status') 
             th= t('views.tasks.author') 
             th= t('views.tasks.executor') 
-            th= t('views.tasks.creationDate') 
+            th= t('views.common.createdAt') 
         tbody 
           each task in tasks 
             tr 
