--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -8,9 +8,14 @@ block content
     +input(task, 'name', errors)(type="text")
     +textarea(task, 'description', t('views.tasks.new.description'))
     +select(statuses, 'statusId', t('views.tasks.status'), errors)
+      option
       each status in statuses
         option(value=status.id)= status.name
     +select(users, 'executorId', t('views.tasks.executor'))
+      option
       each user in users
         option(value=user.id) #{user.firstName} #{user.lastName}
+    +select(labels, 'labels', t('layouts.application.labels'))(multiple)
+      each label in labels 
+        option(value=label.id)= label.name
     +submit(task)(value=t('views.actions.create'))
